# test_case_manager

./: .gitignore  Cargo.toml  README.md  temp_functional-0.1.0_8.csv  temp_functional-0.1.0_8.md
definitions/: smoke-pdp.csv
ejemplos/: smoke-mercadolibre-20250311_123200.csv  smoke-mercadolibre-20250311_123200.md
src/: main.rs
src/commands/: create.rs  execute.rs  mod.rs  modify.rs
src/models/: mod.rs  test_case.rs  test_status.rs
src/utils/: file_operations.rs  mod.rs  spelling.rs
