[package]
name = "test_case_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = "0.6.2"
clap = { version = "4.4.10", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
termcolor = "1.4.0"
colored = "2.0.4"
uuid = { version = "1.6.1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
